<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_history">Clear History</string>
    <string name="num_A">A</string>
    <string name="num_B">B</string>
    <string name="num_C">C</string>
    <string name="num_D">D</string>
    <string name="num_E">E</string>
    <string name="num_F">F</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="sym_add">+</string>
    <string name="sym_sub">—</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="sym_mul">×</string>
    <string name="sym_division">÷</string>
    <string name="sym_dot">.</string>
    <string name="num_0">0</string>
    <string name="sym_open">(</string>
    <string name="sym_close">)</string>
    <string name="sym_equal">=</string>
    <string name="syntax_error">Syntax error</string>
    <string name="history">History</string>
    <string name="hexa">Hex</string>
    <string name="octal">Oct</string>
    <string name="binary">Bin</string>
    <string name="decimal">Dec</string>

    <string name="basic">Basic</string>
    <string name="programming">Programming</string>
    <string name="delete">Delete</string>
</resources>
