<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/myPrimaryColor">

        <ImageView
            android:id="@+id/img_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_selected"
            android:padding="12dp"
            android:src="@drawable/history" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/txt_result"
            android:layout_marginRight="@dimen/margin_size"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_toRightOf="@+id/img_history"

            >

            <TextView
                android:id="@+id/txt_expression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|bottom"

                android:text=""
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_expression" />
        </ScrollView>


        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/margin_size"
            android:layout_toRightOf="@+id/img_history"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_result" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/view_center"
        android:layout_weight="6"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_7" />

            <Button
                android:id="@+id/btn_num_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_8" />

            <Button
                android:id="@+id/btn_num_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_9" />

            <Button
                android:id="@+id/btn_ce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/ce" />

            <Button
                android:id="@+id/btn_c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_4" />

            <Button
                android:id="@+id/btn_num_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_5" />

            <Button
                android:id="@+id/btn_num_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_6" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_add" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_sub" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_1" />

            <Button
                android:id="@+id/btn_num_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_2" />

            <Button
                android:id="@+id/btn_num_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_3" />

            <Button
                android:id="@+id/btn_multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_mul" />

            <Button
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_division" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sym_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_dot" />

            <Button
                android:id="@+id/btn_num_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_0" />

            <Button
                android:id="@+id/btn_sym_open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_open" />

            <Button
                android:id="@+id/btn_sym_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_close" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_equal" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
