<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/myPrimaryColor">

        <ImageView
            android:id="@+id/img_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/button_selected"
            android:padding="@dimen/small_margin"
            android:src="@drawable/history" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_mode_calcu"
            android:layout_below="@+id/img_history"
            android:layout_alignLeft="@+id/img_history"
            android:layout_marginLeft="@dimen/small_margin"
            app:theme="@style/MyToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/txt_result"
            android:layout_marginRight="@dimen/margin_size"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_toRightOf="@+id/img_history"

            >

            <TextView
                android:id="@+id/txt_expression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|bottom"

                android:text=""
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_expression" />
        </ScrollView>


        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/margin_size"
            android:layout_toRightOf="@+id/img_history"
            android:textAllCaps="true"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_result" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/view_center"
        android:layout_weight="6"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_A"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_A"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_num_B"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_B"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_num_C"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_C"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_num_D"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_D"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_num_E"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_E"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_num_F"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_F"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_7" />

            <Button
                android:id="@+id/btn_num_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_8" />

            <Button
                android:id="@+id/btn_num_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_9" />

            <Button
                android:id="@+id/btn_ce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/ce"
                android:textColor="@color/myPrimaryColor" />

            <Button
                android:id="@+id/btn_c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/c"
                android:textColor="@color/myPrimaryColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_4" />

            <Button
                android:id="@+id/btn_num_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_5" />

            <Button
                android:id="@+id/btn_num_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_6" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_add"
                android:textColor="@color/myPrimaryColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_sub"
                android:textColor="@color/myPrimaryColor"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_1" />

            <Button
                android:id="@+id/btn_num_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_2" />

            <Button
                android:id="@+id/btn_num_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/num_3" />

            <Button
                android:id="@+id/btn_multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_mul"
                android:textColor="@color/myPrimaryColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/sym_division"
                android:textColor="@color/myPrimaryColor"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btn_num_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/button_selected"
                android:text="@string/num_0" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_selected"
                android:text="@string/sym_equal"
                android:textColor="@color/myPrimaryColor"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
